# Voice_processing

CosyVoice2_project/: cosyvoice2_pipeline.py  pyproject.toml
CosyVoice2_project/CosyVoice2/: __init__.py  __main__.py
CosyVoice2_project/tests/: test_CosyVoice2.py
DiT_Implementation/: DiT.py
SoundVisualization/: README.md  VisualizingSound.py
TextToSpeech/: DataPreprocessing.py  FlowMatching.py  Model_1.py  Transformer.py  tts.py
TextToSpeech/FlowMatching/: README.md
TextToSpeech/tts_model_1/: Model_1.py
TextToSpeech/tts_model_1/raw_dataset/: metadata.csv
