[project]
name = "CosyVoice2"
version = "1.0.0"
description = "Educational CosyVoice 2 style text-to-speech demo"
authors = [{name = "Your Name", email = "your@email.com"}] #TODO: Add your name and email
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]
cosyvoice2-demo = "cosyvoice2_pipeline:main"




